Responsive issue - phone - headline text wrap
Changed headline title and phone to block elements on phone

--- a/bootstrap/less/hs-custom.less
+++ b/bootstrap/less/hs-custom.less
@@ -39,6 +39,7 @@ body {
 	li {
 		.text-center;
 		.block-cell;
+		vertical-align: middle;
 		margin-left: 0px;
 		list-style: none;
 		border-right: 1px solid (lighten(@blue,20%));
@@ -66,6 +67,7 @@ body {
 	h1, h4, a {
 		color: @white;
 		font-size: @baseFontSize * 1.25;
+		line-height: @baseLineHeight * 1.25;
 	}
 	
 	h1, h4 {
