--- a/css/theme-responsive.css
+++ b/css/theme-responsive.css
@@ -882,6 +882,22 @@
     display: block;
     line-height: 20px;
   }
+  .headline ul li {
+    display: block;
+  }
+  .headline-title:after {
+    content: " ";
+    display: block;
+    background-image: -webkit-linear-gradient(left, #0083e0, #ffffff 25%, #ffffff 75%, #0083e0);
+    background-color: #fff;
+    height: 1px;
+  }
+  .headline-title h1,
+  .headline-title a,
+  .headline-phone h4 {
+    font-size: 16px !important;
+    line-height: 20px !important;
+  }
   input[type="checkbox"],
   input[type="radio"] {
     border: 1px solid #ccc;
